...
            android:text="@string/mobile_session_details_header"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/session_name"
            style="@style/Widget.Aircasting.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/keyline_8"
            android:layout_marginTop="@dimen/keyline_6"
            android:layout_marginEnd="@dimen/keyline_8"
...
            app:hintEnabled="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/session_details_header">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/session_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/session_details_session_name_hint"
                android:minHeight="60dp"
                android:textAppearance="@style/TextAppearance.Aircasting.TextInput.Text"
                android:textColor="@color/aircasting_grey_700" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/session_info"
            style="@style/Widget.Aircasting.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/keyline_8"
            android:layout_marginTop="@dimen/keyline_6"
            android:layout_marginEnd="@dimen/keyline_8"
            app:hintEnabled="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/session_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/session_tags_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/session_details_session_tags_hint"
                android:minHeight="60dp"
                android:textAppearance="@style/TextAppearance.Aircasting.TextInput.Text"
                android:textColor="@color/aircasting_grey_700" />
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/keyline_8"
            android:layout_marginTop="@dimen/keyline_2"
            android:layout_marginEnd="@dimen/keyline_8"
            android:minHeight="60dp"
            app:checkedButton="@id/indoor_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/indoor_toggle_header"
            app:selectionRequired="true"
            app:singleSelection="true">

...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="60dp"
                android:text="@string/fixed_session_details_indoor" />

            <Button
                android:id="@+id/outdoor_button"
                style="@style/Widget.Aircasting.ToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="60dp"
                android:text="@string/fixed_session_details_outdoor" />
...
            android:id="@+id/streaming_method_toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/keyline_8"
            android:layout_marginTop="@dimen/keyline_2"
            android:layout_marginEnd="@dimen/keyline_8"
            app:checkedButton="@id/wifi_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/streaming_method_toggle_header"
            app:selectionRequired="true"
            app:singleSelection="true">

...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="60dp"
                android:text="@string/fixed_session_details_wifi" />

            <Button
                android:id="@+id/cellular_button"
                style="@style/Widget.Aircasting.ToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="60dp"
                android:text="@string/fixed_session_details_cellular" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <TextView
            android:id="@+id/networks_list_header"
            style="@style/TextAppearance.Aircasting.NewSessionDetails.Headline3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/keyline_8"
            android:layout_marginTop="@dimen/keyline_8"
            android:layout_marginEnd="@dimen/keyline_8"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyline_8"
            android:layout_marginBottom="@dimen/keyline_8"
            android:src="@drawable/ic_loader"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/continue_button"
            app:layout_constraintTop_toBottomOf="@+id/networks_list_header"
            app:tint="@color/aircasting_blue_400" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/networks_list"
            android:layout_width="match_parent"
...
