<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/confirmation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
...
            map:uiScrollGestures="false"
            map:uiTiltGestures="false"
            map:uiZoomControls="true"
            map:uiZoomGestures="true" />

        <Button
            android:id="@+id/start_recording_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/keyline_8"
            android:layout_marginTop="@dimen/keyline_8"
            android:layout_marginEnd="@dimen/keyline_8"
            android:layout_marginBottom="@dimen/keyline_10"
...
